Fixed minor mobile layout bug in default theme

--- a/www/style-dark.linux.css
+++ b/www/style-dark.linux.css
@@ -5277,6 +5277,8 @@ div > .MJXc-display {
 		h1.listing + .post-meta .link-post-domain {
 			margin: 0;
 			line-height: 1.3;
+			overflow: hidden;
+			text-overflow: ellipsis;
 		}
 		h1.listing + .post-meta .post-section::before {
 			position: absolute;
